Server side swift using Vapor. Demo app.

--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,7 @@ xcuserdata/
 *.moved-aside
 *.xccheckout
 *.xcscmblueprint
+.DS_Store
 
 ## Obj-C/Swift specific
 *.hmap
@@ -50,8 +51,9 @@ playground.xcworkspace
 # Carthage
 #
 # Add this line if you want to avoid checking in source code from Carthage dependencies.
+# Carthage/Checkouts
 
-IDmeReferee/Carthage/Checkouts
+Carthage/Build
 
 # fastlane
 #
